test/fails/bad_parsing/bad_function10.lgl
int f(int x) {
    int g(int y) {  //Can't declare a function in a function
        return 0;
    }
    return 1;
}

void main() {
    return;
}